refactor(mock-engine): always use virtual threads for Fetch pollers
Remove the whaleRemote||whaleBundle whitelist — virtual threads are the
correct default for I/O-blocking pollers in all modes.